# DoogieBot

./: .clinerules  .dockerignore  .env.example  .gitignore  .pylintrc  Dockerfile  LICENSE  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  entrypoint.prod.sh  entrypoint.sh  start-doogiebot.sh  sync-doogie.sh
.github/workflows/: ci-cd.yml
backend/: alembic.ini  clear_users.py  create_llm_config.py  create_tag_tables.py  init_db.py  main.py  pyproject.toml  requirements.txt  run_migrations.sh
backend/alembic/: env.py
backend/alembic/versions/: 1a80cbac1f8a_auto_generated_migration_on_startup.py  202503281453_add_related_question_id.py  202504300000_add_mcp_agent_tables.py  202505042032_add_full_name_to_user.py  202505050000_ensure_llm_config_table.py  202505051000_update_mcp_config_schema.py  202505051200_add_max_tokens_to_llm_config.py  202505060000_add_tool_calls_to_message.py  340bb28f6d8c_initial_migration.py  890a69efd645_add_mcp_fields_to_agentconfig_and_make_.py  98bf9371c8e5_merge_multiple_heads.py  a1b2c3d4e5f6_add_reranked_top_n_to_llm_config.py  add_graph_implementation_field.py  add_llm_config_table.py  add_mcp_tools_to_llm_config.py  add_rag_config_table.py  add_tag_tables.py  b10a0ccd91dd_create_baseline_schema_reflecting_.py  b1944dee31c0_initial_schema.py  c235e978c1e9_add_temperature_to_llm_config.py  c5d5cda4fa72_regenerate_migrations_to_include_all_.py
backend/app/api/: __init__.py  api.py
backend/app/api/routes/: auth.py  chats.py  docker.py  documents.py  embedding.py  llm.py  mcp.py  rag.py  reranking.py  system.py  tags.py  users.py
backend/app/api/routes/chat/: __init__.py  admin.py  crud.py  llm.py  messages.py  stream.py
backend/app/api/routes/rag/: __init__.py  chunks.py  config.py  graph.py  indexes.py  retrieval.py  status.py
backend/app/core/: config.py
backend/app/db/: base.py  init_models.py
backend/app/llm/: anthropic_client.py  base.py  factory.py  github_copilot_client.py  google_gemini_client.py  ollama_client.py  openai_client.py  openrouter_client.py
backend/app/models/: __init__.py  chat.py  document.py  embedding_config.py  graph.py  indexes.py  llm_config.py  mcp_config.py  rag_config.py  reranking_config.py  tag.py  user.py
backend/app/rag/: bm25_index.py  document_chunker.py  document_parser.py  document_processor.py  faiss_store.py  graph_interface.py  graph_rag.py  graphrag_implementation.py  hybrid_retriever.py  networkx_implementation.py  singleton.py
backend/app/rag/graphrag/: __init__.py  analysis.py  core.py  db_ops.py  search.py
backend/app/rag/networkx/: __init__.py  analysis.py  core.py  db_ops.py  search.py
backend/app/schemas/: __init__.py  chat.py  document.py  embedding.py  llm.py  mcp.py  rag.py  reranking.py  system.py  tag.py  token.py  user.py
backend/app/services/: __init__.py  chat.py  docker_service.py  document.py  embedding_config.py  llm.py  llm_config.py  llm_rag.py  llm_service.py  llm_stream.py  mcp_config_service.py  rag_config.py  reranking_config.py  system.py  tag.py  user.py  zip_processor.py
backend/app/services/mcp_config_service/: __init__.py  config_gen.py  crud.py  docker_utils.py  execution.py  lifecycle.py  manager.py  status.py
backend/app/utils/: deps.py  docker_cmd.py  docker_config.py  middleware.py  security.py  xml_parser.py
backend/tests/: README_fetch_tool.md  configure_fetch_tool.sh  debug_fetch_tool.sh  test_api_integration.py  test_docker_api.py  test_docker_config.py  test_fetch_tool.sh  test_mcp_config.py  test_tags.sh  test_tool_functions.sh  verify_fetch_tool.sh
backend/tests/api/: test_chunk_info_endpoint.py
backend/tests/mocks/: docker_api_responses.py  docker_client.py  mcp_config_samples.py
backend/tests/selenium/: setup.py
docs/: development_guide.md  docker_api.md  mcp.md  projectoverview.md  structure.md  tool_calling.md
frontend/: next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/contexts/: AuthContext.tsx  NotificationContext.tsx  OnboardingContext.tsx  ShortcutContext.tsx  ThemeContext.tsx
frontend/hooks/: useChatList.ts  useChatMessages.ts  useChatUI.ts  useCurrentChat.ts  useErrorHandler.tsx  useSidebarSettings.tsx
frontend/pages/: _app.tsx  index.tsx  login.tsx  profile.tsx  register.tsx
frontend/services/: api.ts  auth.ts  chat.ts  document.ts  llm.ts  mcp.ts  rag.ts  system.ts  user.ts
frontend/styles/: globals.css  tooltip.css
frontend/types/: index.ts  react-window.d.ts
frontend/utils/: accessibilityUtils.ts  errorHandling.ts  exportUtils.ts  keyboardShortcuts.ts  loadingUtils.ts  notificationUtils.ts  (+3 more)
memory-bank/: activeContext.md  graphrag_implementation_plan.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
scripts/: docker_setup.sh  fix-all.sh  fix-docker-compose.sh  fix-permissions.sh
(+60 files in other folders)
